<resources>
    <string name="app_name">My Money</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sign In?</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open_source_and_resource_label">This app includes following open source libraries and resource
    </string>
    <string name="about_us_label">This app includes following contributors
    </string>

    <string name="skip_or_done">Skip</string>
    <string name="got_it">Got It !</string>
    <string name="skip">Skip</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="dashboard_empty_title">Oh Ho</string>
    <string name="dashboard_empty_message">Looks like it\'s an ideal day!!!</string>
    <string name="dashboard_empty_action">Click on + to add your Expense/Income</string>
    <string name="content_description_dashboard_empty_image">Dashboard empty ImageView</string>
    <string name="search_category">Search category</string>
    <string name="content_description_income_or_expense_image_on_dashboard">Income or Expense image on dashboard
    </string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="five">5</string>
    <string name="eight">8</string>
    <string name="period">.</string>
    <string name="zero">0</string>
    <string name="three">3</string>
    <string name="nine">9</string>
    <string name="six">6</string>
    <string name="four">4</string>
    <string name="seven">7</string>
    <string name="memo">Memo</string>
    <string name="today">Today</string>
</resources>
