<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        android:elevation="4dp"
        android:id="@+id/incomeExpensePad"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:background="@color/grey_600"
        android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/topConstraintLayout" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0.5dp" app:layout_constraintStart_toStartOf="parent"
            style="@style/AppSubTitleStyleBlack"
            android:hint="@string/memo"
            android:minHeight="40dp" android:background="@color/colorScreenBackground"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent">

        <ImageView
                android:id="@+id/hideNumberPadImageView"
                android:layout_width="40dp"
                android:src="@drawable/ic_keyboard_arrow_down"
                android:layout_height="40dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="10dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                style="@style/AppSubTitleStyleBlack"
                android:hint="@string/memo"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginStart="0.5dp"
                android:layout_marginEnd="0.5dp"
                android:minHeight="40dp"
                android:background="@color/colorScreenBackground"
                android:id="@+id/memoEditText" app:layout_constraintStart_toEndOf="@+id/hideNumberPadImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dateButton"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
                android:text="@string/today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/dateButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/grey_50" style="@style/AppBodyStyleBlack"
                app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
            android:layout_width="70dp"
            android:layout_height="40dp" app:srcCompat="@drawable/ic_food"
            android:id="@+id/selectedCategoryImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/amountTextView"
            app:layout_constraintTop_toBottomOf="@+id/topConstraintLayout"
            app:layout_constraintEnd_toStartOf="@+id/amountTextView"
            android:layout_marginStart="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:focusable="true"
            android:clickable="true"
            android:padding="4dp" android:background="@color/colorScreenBackground" android:layout_marginTop="0.5dp"/>
    <ImageView
            android:layout_width="70dp"
            android:layout_height="40dp" app:srcCompat="@drawable/ic_backspace"
            android:id="@+id/deleteNumberImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/amountTextView"
            app:layout_constraintTop_toBottomOf="@+id/topConstraintLayout"
            app:layout_constraintStart_toEndOf="@+id/amountTextView" android:padding="4dp"
            android:background="@color/colorScreenBackground" android:layout_marginTop="0.5dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/amountTextView"
            app:layout_constraintTop_toBottomOf="@+id/topConstraintLayout"
            app:layout_constraintEnd_toStartOf="@+id/deleteNumberImageView"
            app:layout_constraintStart_toEndOf="@+id/selectedCategoryImageView"
            style="@style/AppTitleStyleBlack"
            android:background="@color/colorScreenBackground"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:minHeight="40dp"
            android:ellipsize="start"
            android:gravity="center_vertical|end" android:paddingStart="16dp"
            android:paddingEnd="16dp"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline25"
            app:layout_constraintGuide_percent="0.25"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline50"
            app:layout_constraintGuide_percent="0.5"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline75"
            app:layout_constraintGuide_percent="0.75"/>
    <Button
            android:text="@string/one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/oneButton"
            android:minHeight="60dp"
            app:layout_constraintTop_toBottomOf="@+id/amountTextView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/guideline25"
            style="@style/AppSubTitleStyleBlackBold" android:background="@color/grey_50"
            android:layout_marginTop="0.5dp"
    />
    <Button
            android:text="@string/two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/twoButton"
            android:minHeight="60dp"
            style="@style/AppSubTitleStyleBlackBold"
            app:layout_constraintTop_toBottomOf="@+id/amountTextView"
            app:layout_constraintStart_toEndOf="@+id/oneButton"
            app:layout_constraintEnd_toStartOf="@+id/guideline50" android:background="@color/grey_50"
            android:layout_marginTop="0.5dp" android:layout_marginStart="0.5dp" android:layout_marginEnd="0.5dp"
    />
    <Button
            android:text="@string/five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/fiveButton"
            android:minHeight="60dp"
            style="@style/AppSubTitleStyleBlackBold"
            app:layout_constraintStart_toEndOf="@+id/oneButton"
            app:layout_constraintEnd_toStartOf="@+id/guideline50"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/twoButton" android:background="@color/grey_50"
            android:layout_marginTop="0.5dp" android:layout_marginStart="0.5dp" android:layout_marginEnd="0.5dp"
    />
    <Button
            android:text="@string/eight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/eightButton"
            style="@style/AppSubTitleStyleBlackBold"
            android:minHeight="60dp"
            app:layout_constraintStart_toEndOf="@+id/oneButton"
            app:layout_constraintEnd_toStartOf="@+id/guideline50"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintTop_toBottomOf="@+id/fiveButton" android:background="@color/grey_50"
            android:layout_marginTop="0.5dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="0.5dp"
            android:layout_marginEnd="0.5dp"/>
    <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/doneImageButton"
            style="@style/AppTitleStyleWhite"
            app:layout_constraintStart_toStartOf="@+id/guideline75"
            app:layout_constraintEnd_toEndOf="parent"
            android:minHeight="60dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/decimalButton" android:src="@drawable/ic_done"
            android:background="@color/colorButtonBackground" android:tint="@color/colorWhite"
            android:layout_marginTop="0.5dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/period"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/decimalButton"
            style="@style/AppSubTitleStyleBlackBold"
            app:layout_constraintStart_toStartOf="@+id/guideline75"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:minHeight="60dp"
            app:layout_constraintTop_toBottomOf="@+id/zeroButton" android:background="@color/grey_50"
            android:layout_marginTop="0.5dp"/>
    <Button
            android:text="@string/zero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/zeroButton"
            style="@style/AppSubTitleStyleBlackBold"
            app:layout_constraintStart_toStartOf="@+id/guideline75"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amountTextView"
            android:minHeight="60dp" android:background="@color/grey_50" android:layout_marginTop="0.5dp"
    />
    <Button
            android:text="@string/three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/threeButton"
            android:minHeight="60dp"
            style="@style/AppSubTitleStyleBlackBold"
            app:layout_constraintStart_toStartOf="@+id/guideline50"
            app:layout_constraintEnd_toStartOf="@+id/guideline75"
            app:layout_constraintTop_toBottomOf="@+id/amountTextView" android:background="@color/grey_50"
            android:layout_marginTop="0.5dp" android:layout_marginEnd="0.5dp"/>
    <Button
            android:text="@string/nine"
            android:layout_width="0dp"
            android:minHeight="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/nineButton"
            style="@style/AppSubTitleStyleBlackBold"
            app:layout_constraintStart_toStartOf="@+id/guideline50"
            app:layout_constraintEnd_toStartOf="@+id/guideline75"
            app:layout_constraintTop_toBottomOf="@+id/sixButton" android:background="@color/grey_50"
            android:layout_marginTop="0.5dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="0.5dp"
    />
    <Button
            android:text="@string/six"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sixButton"
            android:minHeight="60dp"
            style="@style/AppSubTitleStyleBlackBold"
            app:layout_constraintStart_toStartOf="@+id/guideline50"
            app:layout_constraintEnd_toStartOf="@+id/guideline75"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/threeButton" android:background="@color/grey_50"
            android:layout_marginTop="0.5dp" android:layout_marginEnd="0.5dp"/>
    <Button
            android:text="@string/four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/fourButton"
            android:minHeight="60dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/guideline25"
            style="@style/AppSubTitleStyleBlackBold"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/oneButton" android:background="@color/grey_50"
            android:layout_marginTop="0.5dp"/>
    <Button
            android:text="@string/seven"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:id="@+id/sevenButton"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/guideline25"
            style="@style/AppSubTitleStyleBlackBold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/fourButton" android:background="@color/grey_50"
            android:layout_marginTop="0.5dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>